--- a/index.html
+++ b/index.html
@@ -48,20 +48,8 @@
 
   <h1>🧠 Memory Flip Game</h1>
 
-  <!-- 🟡 PLACEHOLDER FOR GOOGLE ADSENSE CODE -->
-  <!-- Paste your AdSense code here once approved -->
-  <!-- Example: -->
-  <!-- 
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+ <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3382881008359890"
      crossorigin="anonymous"></script>
-  <ins class="adsbygoogle"
-       style="display:block"
-       data-ad-client="ca-pub-XXXXXXXXXXXX"
-       data-ad-slot="YYYYYYYYYY"
-       data-ad-format="auto"
-       data-full-width-responsive="true"></ins>
-  <script>(adsbygoogle = window.adsbygoogle || []).push({});</script> 
-  -->
 
   <div id="gameBoard"></div>
   <div id="winMessage"></div>
