--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="google-adsense-account" content="ca-pub-3382881008359890">
+  <meta name="google-adsense-account" content="ca-pub-3382881008359890" />
   <title>🧠 Memory Flip Game</title>
   <style>
     body {
